--- a/Adventure.html
+++ b/Adventure.html
@@ -131,9 +131,9 @@ function startGame() {
 	unitCardSight = new component("900 32px", "Arial", "white", boardX-spaceSize + 35, boardY-spaceSize*2 + 103, "text", "4");
 	
 	for (var i = 0; i < 20; i++) {
-		captureBar[i] = new component(64, 10, "solidBlue", toPixel(12,0)-32, toPixel(12,0)-i*12, "square", "none");
+		captureBar[i] = new component(64, 10, "solidGrey", toPixel(12,0)-32, toPixel(12,0)-i*12, "square", "none");
 	}
-	captureCounter = new component("900 32px", "Arial", "solidBlue", toPixel(12,0)-22, boardY-spaceSize*2 + 103, "text", "4");
+	captureCounter = new component("900 32px", "Arial", "solidGrey", toPixel(12,0)-22, boardY-spaceSize*2 + 103, "text", "4");
 	captureCard = new component(128, 320, "captureCard.png", boardX-spaceSize*2, boardY-spaceSize*5, "none", "none");
 	
 	gameArea.start();
@@ -302,6 +302,10 @@ function component(width, height, color, x, y, type, unit) {
 			ctx.font = this.width + " " + this.height;
 			if (color == "solidBlue") 
 				ctx.fillStyle = "rgba(0, 78, 225, 1)";
+			else if (color == "solidGrey")
+				ctx.fillStyle = "rgba(106, 107, 107, 1)";
+			else if (color == "solidRed")
+				ctx.fillStyle = "rgba(209, 21, 30, 1)";
 			else 
 				ctx.fillStyle = color;
 			ctx.fillText(this.text, this.x, this.y);
@@ -314,6 +318,10 @@ function component(width, height, color, x, y, type, unit) {
 				ctx.fillStyle = "rgba(89, 89, 89, 0.7)";
 			else if (color == "solidBlue") 
 				ctx.fillStyle = "rgba(0, 78, 225, 1)";
+			else if (color == "solidGrey")
+				ctx.fillStyle = "rgba(106, 107, 107, 1)";
+			else if (color == "solidRed")
+				ctx.fillStyle = "rgba(209, 21, 30, 1)";
 			else 
 				ctx.fillStyle = "rgba(212, 210, 144, 0.5)";
             ctx.fillRect(this.x, this.y, this.width, this.height);
@@ -397,12 +405,14 @@ function updateGameArea() {
 	unitCardSight.update();
 	}
 
-	if (capturing) {
+	if (capturing && delay < 0) {
 		if (frame % 7 == 0) {
 			if (capturing > 0) {
 				captureCounter.text = captureCounter.text-1;							
 				if (captureCounter.text == Math.abs(captureVal)) {
 					capturing = -4;
+					//spaces[x][y].image.src = terrainImg[board[x][y]];
+					delay = -2;	
 				}
 			}
 			else if (capturing < 0) {
@@ -416,6 +426,7 @@ function updateGameArea() {
 			captureBar[i].update();
 		}
 	}
+	
 	//fogUpdate();
 	
 	if (delay > 0) {
@@ -503,7 +514,7 @@ function handleInput() {
 }
 
 function clicked(event) {
-	if (delay < 0) {
+	if (delay < 0 && !capturing) {
 
 		var x = toSpace(event.clientX, globalOffsetX);
 		var y = toSpace(event.clientY, globalOffsetY);
@@ -513,7 +524,6 @@ function clicked(event) {
 				if (terrainCardSpace) {
 					movementHighlights = [];
 				}
-				//spaces[x][y].image.src = getImage(x,y,1);
 				selectedUnit = entityLayer[x][y];
 				highlightMoveable(x,y);	
 				terrainCardOn = false;
@@ -539,7 +549,7 @@ function clicked(event) {
 		}
 
 		else if (entityLayer[x][y] > -1) {
-			if (board[x][y] > 3 && entityLayer[x][y] == selectedUnit) {
+			if (board[x][y] > 6 && entityLayer[x][y] == selectedUnit) {
 				captureStructure(x,y);
 			}
 			clickedReset();
@@ -561,8 +571,11 @@ function clicked(event) {
 				moveParams = [moves[moves.length-1][0],moves[moves.length-1][1],playerUnits[selectedUnit],moves.length-1];
 				path = [];
 				clearMoveable();
-				unitCardOn = 0;
+				unitCardOn = 0;		
 				executeMoves();
+				if(structureMap[x][y] < 0) {
+					captureStructure(x,y);
+				}
 			}
 			else if (spaces[x][y].moveable) {
 				phase = 1;
@@ -652,18 +665,15 @@ function drawPath(i) {
 }
 
 function executeMoves () {
+		if (delay == -2) {
+			delay = 0;
+		}
 		moveActual(moveParams[0],moveParams[1],moveParams[2]);
 		if (moveParams[3] >= 0) {
 			moveParams[0] = moves[moveParams[3]][0];
 			moveParams[1] = moves[moveParams[3]][1];
 			moveParams[3] = moveParams[3]-1;
-			
-			if (delay == -2) {
-				delay = 0;
-			}
-			else {
-				delay = 9;
-			}
+			delay = 9;
 		}
 		else if (moveParams[3] == -1) {
 			moveOver();
@@ -675,17 +685,12 @@ function moveActual(x,y,given) {
 	given.y = toPixel(y,globalOffsetY) + ((spaceSize-given.height)/2);
 	playerHP[selectedUnit].x = toPixel(x,globalOffsetX) + 32;
 	playerHP[selectedUnit].y = toPixel(y,globalOffsetY) + 57;
-	if(structureMap[x][y] < 0) {
-		captureStructure(x,y);
-	}
 }
 
 /*known bugs
 -will only work with friendly
--broken by spam clicking
 -not affected by unit health
 -if statment to change terrain wont work with enemy
--TERRAIN CHANGED BY IF BUT IMAGE NOT
 */
 
 function captureStructure(x,y) {
@@ -693,13 +698,22 @@ function captureStructure(x,y) {
 	captureCounter.text = Math.abs(structureMap[x][y]);
 	captureVal = structureMap[x][y] + 10;//*(temp/Math.abs(temp));
 	structureMap[x][y] = captureVal;
+	if (board[x][y] > 8) {
+		for (var i = 0; i < 20; i++) {
+			captureBar[i] = new component(64, 10, "solidRed", toPixel(12,0)-32, toPixel(12,0)-i*12, "square", "none"); //This is an awful clumsy way to do this but had problems w/ edit
+		}
+		captureCounter = new component("900 32px", "Arial", "solidRed", toPixel(12,0)-22, boardY-spaceSize*2 + 103, "text", captureCounter.text);
+		//captureCard = new component(128, 320, "captureCard.png", boardX-spaceSize*2, boardY-spaceSize*5, "none", "none");
+	}
+	
 	if (structureMap[x][y] >= 0) {
 		if (board[x][y] > 8) {
-			alert("fix capture structure");
+			board[x][y] = board[x][y]-5;
+			spaces[x][y].image.src = terrainImg[board[x][y]];
 		}
 		else if (board[x][y] > 6) {
-		alert(board[x][y]);
-			board[x][y] = 3;
+			board[x][y] = board[x][y]-2;
+			spaces[x][y].image.src = terrainImg[board[x][y]];
 		}
 	}
 }
